# barosaVNC

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-pasted-niche-os.yml
include/: cli.hpp  discord.hpp  util.hpp  vnc.hpp  webp.hpp  wire.hpp
src/: cli.cpp  discord.cpp  main.cpp  util.cpp  vnc.cpp  webp.cpp  wire.cpp
